@@ -4,8 +4,8 @@ script.skinshortcuts was written with the intention of making user customizable 
 What's New for Skinners (version 0.4.1 - development revision)
 -----------------------
 
- - Advice clarification - labelIDs in defaults must match the labelID the script would generate for the label of the shortcut. See "Providing default shortcuts" below.
- - Advance warning - In an upcoming build, the labelID property will be removed from the xml data files. Existing labelID properties will then be ignored.
+ - Ability to skip warning when resetting all shortcuts. See "Resetting all shortcuts", below
+ - Advice change - consider providing a defaultID in your default shortcuts. See "Providing default shortcuts", below.
  
 
 What's New for Skinners (version 0.4.0)
@@ -208,6 +208,16 @@ If your skin provides a main menu you want to display shortcuts for using the sc
 Then, in the list where you want the submenu to appear, put the following in the <content> tag:
 
 	<include>skinshortcuts-submenu</include>
+	
+	
+Resetting All Shortcuts
+-----------------------
+
+It is recommended you give users the option to reset all shortcuts to defaults within your skinsettings.xml, by including a button with the following onclick:
+
+	<onclick>RunScript(script.skinshortcuts,type=resetall)</onclick>
+	
+You can also include &amp;warning=false if your skin provides a warning to the user before this action is carried out.
 
 
 Recommended [groupname]'s
@@ -234,7 +244,7 @@ Providing default shortcuts
 
 If the user has not already selected any shortcuts or if the user resets shortcuts, the script will first attempt to load defaults from a file provided by the skin before trying to load its own.
 
-To provide this optional file, create a new sub-directory in your skin called 'shortcuts', and drop the relevant [groupname].DATA.xml file into it, or create the file manually. See "Recommended [groupname]'s" for ideas of some of the default files you may wish to provide, along with mainmenu.shortcuts if you are using the script to manage the main menu.
+To provide this optional file, create a new sub-directory in your skin called 'shortcuts', and drop the relevant [groupname].DATA.xml file into it, or create the file manually. See "Recommended [groupname]'s" for ideas of some of the default files you may wish to provide, along with mainmenu.DATA.xml if you are using the script to manage the main menu.
 
 The script provides defaults equivalent to Confluence's main menu and sub-menus.
 
@@ -249,14 +259,13 @@ The file format is simple enough:
 		<thumb>The default thumbnail to use for the shortcut (optional)</thumb>
 		<action>The default action of the shortcut</action>
 		<visible>Visibility condition for the shortcut (optional)</visible>
+		<defaultID>The defaultID of the menu item</defaultID>
 	</shortcut>
 </shortcuts
 
 If you want to provide a default which links to a playlist you include with your skin, then make sure the .shortcuts file uses the special protocol (e.g. special://skin/) as the URI to it. The script will replace this with a localised version, so that the playlist link will continue to work even if the user switches to another skin supporting skin shortcuts.
 
-Important - If you provide a labelID element, its value MUST match the labelID that would be generated by the script for the shortcuts label. Failure to do this will cause issues. See "labelID and defaultID.txt" for details of what labelID the script will generate.
-
-Please note, the labelID element is not intended to be provided in defaults, and will stop functioning in all xml files in an upcoming revision.
+Particularly when setting defaults for the main menu, you may wish to include the <defaultID> element. This will set the [groupname] of the submenu's .DATA.xml file. (e.g. defaultID of tvshows -> tvshows.DATA.xml). Please note, any defaultID must follow the standard rules - all lowercase, all english characters, no spaces.
 	
 	
 Properties returned
