@@ -1,6 +1,8 @@
 v0.4.1 (Development revision)
-- [] Fix for profiles shared via path substitution
+- [robweber] Fix for profiles shared via path substitution
 - Change how submenuVisibility property is generated
+- Skin and script default shortcuts now loaded from defaultID property
+- Ability to skip warning when resetting all shortcuts
 
 v0.4.0
 - New localisation code
